--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');  
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
 .container {
     display: flex;
     justify-content: center;
