--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,23 @@ body {
     color: #fff;
 }
 
+.title-second {
+    color: #58af9b;
+}
+
 .description{
     font-size: 14px;
     font-weight: 300;
     color: #fff;
     line-height: 30px;
+}
+
+.description-primary{
+    color: #fff;
+}
+
+.description-second{
+    color: #7f8c8d;
 }
 
 .btn {
@@ -103,6 +115,20 @@ body {
 
 .list-social-media {
     display: flex;
+    list-style-type: none;
+}
+
+.item-social-media{
+    border: 1px solid #bdc3c7;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+}
+
+.item-social-media a{
+    color: #95a5a6;
 }
 
 .form{
