--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,7 @@ body {
     width: 40%;
     height: 100%;
     border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-
-
+    border-bottom-left-radius: 15px; 
     left: 0;
 }
 
@@ -132,6 +130,16 @@ body {
     margin: 1rem 0 ;
 }
 
+.link-social-media:hover .item-social-media{
+    background-color: #58af9b;
+    color: #fff;
+    border-color: #58af9b;
+}
+
+.link-social-media:not(:first-child){
+    margin-left: 10px;
+}
+
 .list-social-media {
     display: flex;
     list-style-type: none;
@@ -144,13 +152,6 @@ body {
     height: 35px;
     line-height: 35px;
     text-align: center;
-}
-
-.item-social-media:not(:first-child){
-    margin-left: 10px;
-}
-
-.item-social-media a{
     color: #95a5a6;
 }
 
@@ -178,6 +179,8 @@ body {
     color: #7f8c8d;
     padding: 0 5px;
 }
+
+/*second content*/
 
 .second-content {
     position: absolute;
