--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
 .container {
     display: flex;
     justify-content: center;
@@ -14,15 +17,17 @@ body {
     height: 100vh;
     background-color: #ecf0f1;
 }
+
 .content {
     background-color: #fff;
     border-radius: 15px;
     width: 960px;
-    height: 50%;
+    height: 60%;
     justify-content: space-between;
     align-items: center;
     position: relative;
 }
+
 .content::before {
     content: "";
     position: absolute;
@@ -35,28 +40,35 @@ body {
 
     left: 0;
 }
+
 .title {
     font-size: 28px;
     font-weight: bold;
     text-transform: capitalize;
 }
+
 .title-primary {
     color: #fff;
 }
+
 .title-second {
     color: #58af9b;
 }
+
 .description {
     font-size: 14px;
     font-weight: 300;
     line-height: 30px;
 }
+
 .description-primary {
     color: #fff;
 }
+
 .description-second {
     color: #7f8c8d;
 }
+
 .btn {
     border-radius: 15px;
     text-transform: uppercase;
@@ -70,60 +82,74 @@ body {
     border: none;
     margin-top: 1rem;
 }
+
 .btn-primary {
     background-color: transparent;
     border: 1px solid #fff;
     transition: background-color .5s;
 }
+
 .btn-primary:hover {
     background-color: #fff;
     color: #58af9b;
 }
+
 .btn-second {
     background-color: #58af9b;
     border: 1px solid #58af9b;
     transition: background-color .5s;
 }
+
 .btn-second:hover {
     background-color: #fff;
     border: 1px solid #58af9b;
     color: #58af9b;
 }
+
 .first-content {
     display: flex;
 }
+
 .first-content .second-column {
     z-index: 11;
 }
+
 .first-column {
     text-align: center;
     width: 40%;
     z-index: 10;
 }
+
 .second-column {
     width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .social-media {
     margin: 1rem 0;
 }
-.link-social-media:not(:first-child){
+
+.link-social-media:not(:first-child) {
     margin-left: 10px;
 }
+
 .link-social-media .item-social-media {
     transition: background-color .5s;
 }
-.link-social-media:hover .item-social-media{
+
+.link-social-media:hover .item-social-media {
     background-color: #58af9b;
     color: #fff;
     border-color: #58af9b;
 }
+
 .list-social-media {
     display: flex;
     list-style-type: none;
 }
+
 .item-social-media {
     border: 1px solid #bdc3c7;
     border-radius: 50%;
@@ -133,28 +159,32 @@ body {
     text-align: center;
     color: #95a5a6;
 }
+
 .form {
     display: flex;
     flex-direction: column;
     width: 55%;
 }
+
 .form input {
     height: 45px;
     width: 100%;
     border: none;
     background-color: #ecf0f1;
 }
-input:-webkit-autofill 
-{    
+
+input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px #ecf0f1 inset !important;
     -webkit-text-fill-color: #000 !important;
 }
+
 .label-input {
     background-color: #ecf0f1;
     display: flex;
     align-items: center;
     margin: 8px;
 }
+
 .icon-modify {
     color: #7f8c8d;
     padding: 0 5px;
@@ -166,25 +196,27 @@ input:-webkit-autofill
     position: absolute;
     display: flex;
 }
+
 .second-content .first-column {
     order: 2;
     z-index: -1;
 }
+
 .second-content .second-column {
     order: 1;
     z-index: -1;
 }
+
 .password {
     color: #34495e;
     font-size: 14px;
     margin: 15px 0;
     text-align: center;
 }
+
 .password::first-letter {
     text-transform: capitalize;
 }
-
-
 
 .sign-in-js .first-content .first-column {
     z-index: -1;
@@ -193,6 +225,7 @@ input:-webkit-autofill
 .sign-in-js .second-content .second-column {
     z-index: 11;
 }
+
 .sign-in-js .second-content .first-column {
     z-index: 13;
 }
@@ -203,13 +236,13 @@ input:-webkit-autofill
     border-bottom-left-radius: 0;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    animation: slidein 1.3s; 
+    animation: slidein 1.3s;
 
     z-index: 12;
 }
 
 .sign-up-js .content::before {
-    animation: slideout 1.3s; 
+    animation: slideout 1.3s;
 
     z-index: 12;
 }
@@ -224,20 +257,20 @@ input:-webkit-autofill
 }
 
 .sign-up-js .first-content .first-column {
-    z-index: 13;    
+    z-index: 13;
 }
 
 .sign-in-js .first-content .second-column {
 
     z-index: -1;
     position: relative;
-    animation: deslocamentoEsq 1.3s; 
+    animation: deslocamentoEsq 1.3s;
 }
 
 .sign-up-js .second-content .second-column {
     position: relative;
     z-index: -1;
-    animation: deslocamentoDir 1.3s; 
+    animation: deslocamentoDir 1.3s;
 }
 
 /*ANIMAÇÃOO CSS PARA O CONTEÚDO*/
@@ -361,15 +394,18 @@ input:-webkit-autofill
         top: 0;
         border-radius: 0;
     }
-    .first-content, .second-content {
+
+    .first-content,
+    .second-content {
         flex-direction: column;
         justify-content: space-around;
     }
 
-    .first-column, .second-column {
+    .first-column,
+    .second-column {
         width: 100%;
     }
-    
+
     .sign-in-js .content::before {
         top: 60%;
         left: 0;
@@ -380,7 +416,7 @@ input:-webkit-autofill
     .form {
         width: 90%;
     }
-    
+
 
     @keyframes deslocamentoEsq {
 
@@ -389,104 +425,104 @@ input:-webkit-autofill
             opacity: 1;
             z-index: 12;
         }
-    
+
         25% {
             top: -80px;
             opacity: .5;
         }
-    
+
         50% {
             top: -100px;
             opacity: .2;
         }
-    
+
         to {
             top: -110px;
             opacity: 0;
             z-index: -1;
         }
     }
-    
-    
+
+
     @keyframes deslocamentoDir {
-    
+
         from {
             top: 0;
             z-index: 12;
         }
-    
+
         25% {
             top: 80px;
         }
-    
+
         50% {
             top: 100px;
         }
-    
+
         to {
             top: 110px;
             z-index: -1;
         }
     }
-    
-    
-    
+
+
+
     @keyframes slidein {
-    
+
         from {
             top: 0;
             height: 40%;
         }
-    
+
         25% {
             top: 5%;
             height: 50%;
         }
-    
+
         50% {
             top: 25%;
             height: 60%;
         }
-    
+
         75% {
             top: 45%;
             height: 50%;
         }
-    
+
         to {
             top: 60%;
             height: 40%;
         }
     }
-    
+
     @keyframes slideout {
-    
+
         from {
             top: 60%;
             height: 40%;
         }
-    
+
         25% {
             top: 45%;
             height: 50%;
         }
-    
+
         50% {
             top: 25%;
             height: 60%;
         }
-    
+
         75% {
             top: 5%;
             height: 50%;
         }
-    
+
         to {
             top: 0;
             height: 40%;
         }
     }
-   
+
 }
 
 @media screen and (max-width: 740px) {
